erDiagram
    %% pgconsole schema entity-relationship diagram
    %% Shows the main history tables used for metrics sampling and trend visualisation

    SYSTEM_METRICS_HISTORY {
        BIGSERIAL id PK
        TIMESTAMPTZ sampled_at
        TEXT instance_id
        INT total_connections
        INT max_connections
        INT active_queries
        INT idle_connections
        INT idle_in_transaction
        INT blocked_queries
        DOUBLE longest_query_seconds
        DOUBLE longest_transaction_seconds
        DOUBLE cache_hit_ratio
        BIGINT total_database_size_bytes
    }

    QUERY_METRICS_HISTORY {
        BIGSERIAL id PK
        TIMESTAMPTZ sampled_at
        TEXT instance_id
        TEXT query_id
        TEXT query_text
        BIGINT total_calls
        DOUBLE total_time_ms
        BIGINT total_rows
        DOUBLE mean_time_ms
        DOUBLE min_time_ms
        DOUBLE max_time_ms
        DOUBLE stddev_time_ms
        BIGINT shared_blks_hit
        BIGINT shared_blks_read
        BIGINT temp_blks_written
    }

    DATABASE_METRICS_HISTORY {
        BIGSERIAL id PK
        TIMESTAMPTZ sampled_at
        TEXT instance_id
        TEXT database_name
        INT num_backends
        BIGINT xact_commit
        BIGINT xact_rollback
        BIGINT blks_hit
        BIGINT blks_read
        DOUBLE cache_hit_ratio
        BIGINT tup_returned
        BIGINT tup_fetched
        BIGINT tup_inserted
        BIGINT tup_updated
        BIGINT tup_deleted
        BIGINT deadlocks
        BIGINT conflicts
        BIGINT temp_files
        BIGINT temp_bytes
        BIGINT database_size_bytes
    }

    %% Relationships
    %% All history tables share instance_id and are correlated by sampled_at timestamp
    SYSTEM_METRICS_HISTORY ||--o{ QUERY_METRICS_HISTORY : "correlated by instance_id and sampled_at"
    SYSTEM_METRICS_HISTORY ||--o{ DATABASE_METRICS_HISTORY : "correlated by instance_id and sampled_at"
    QUERY_METRICS_HISTORY ||--o{ DATABASE_METRICS_HISTORY : "shares instance_id"
